--- a/DragonTacticsSheet.html
+++ b/DragonTacticsSheet.html
@@ -291,6 +291,7 @@
 						<option value="6">Immediate</option>
 						<option value="7">No Action</option>
 					</select></label> 
+					<label title="Ready">Ready: <input name="attr_Encounter-Ready" type="checkbox" value=1></label>
 					<label title="Range and Targets">Range and Targets: <input type="text" name="attr_Encounter-RangeTargets"></label> 
 					<label title="Power Text">Power Text: <textarea name="attr_Encounter-Power-Text"></textarea></label>
 					<div>
@@ -357,6 +358,7 @@
 						<option value="6">Immediate</option>
 						<option value="7">No Action</option>
 					</select></label> 
+					<label title="Ready">Ready: <input name="attr_Daily-Ready" type="checkbox" value=1></label>
 					<label title="Range and Targets">Range and Targets: <input type="text" name="attr_Daily-RangeTargets"></label> 
 					<label title="Power Text">Power Text: <textarea name="attr_Daily-Power-Text"></textarea></label>
 					<div>
