--- a/DragonTacticsSheet.html
+++ b/DragonTacticsSheet.html
@@ -1,4 +1,4 @@
-<input type="hidden" name="attr_Version" value="3" />
+<input type="hidden" name="attr_Version" value="3.1" />
 
 <div class="main">
     <div class="header section">
@@ -874,8 +874,9 @@
         <br />
         <h3>Defenses</h3>
         <input type="number" name="attr_AC" value="10" class="sheet-defense" />
-        Armor Class (misc bonus:
-        <input type="number" name="attr_AC-Misc" value="0" /> )
+        Armor Class
+        <br />
+        Misc bonus: <input type="number" name="attr_AC-Misc" value="0" />
         <br />
         <input
             type="number"
@@ -883,12 +884,16 @@
             value="10"
             class="sheet-defense"
         />
-        Fortitude (class/misc bonus:
-        <input type="number" name="attr_Fort-Misc" value="0" /> )
+        Fortitude
+        <br />
+        Class/Misc bonus:
+        <input type="number" name="attr_Fort-Misc" value="0" />
         <br />
         <input type="number" name="attr_Ref" value="10" class="sheet-defense" />
-        Reflex (class/misc bonus:
-        <input type="number" name="attr_Ref-Misc" value="0" /> )
+        Reflex
+        <br />
+        Class/Misc bonus:
+        <input type="number" name="attr_Ref-Misc" value="0" />
         <br />
         <input
             type="number"
@@ -896,8 +901,10 @@
             value="10"
             class="sheet-defense"
         />
-        Will (class/misc bonus:
-        <input type="number" name="attr_Will-Misc" value="0" /> )
+        Will
+        <br />
+        Class/Misc bonus:
+        <input type="number" name="attr_Will-Misc" value="0" />
     </div>
     <div class="effects section">
         <h2>Stats</h2>
