--- a/DragonTacticsSheet.html
+++ b/DragonTacticsSheet.html
@@ -1,4 +1,4 @@
-<input type="hidden" name="attr_Version" value="3.1" />
+<input type="hidden" name="attr_Version" value="3.2" />
 
 <div class="main">
     <div class="header section">
@@ -65,7 +65,7 @@
                     class="sheet-arrow"
                 />
                 <div class="body">
-                    <select name="attr_Athletics-Train">
+                    <select name="attr_Athletics-Train" class="sheet-Training">
                         <option value="0">Untrained</option>
                         <option value="2">Adept</option>
                         <option value="4">Trained</option>
@@ -123,7 +123,7 @@
                     class="sheet-arrow"
                 />
                 <div class="body">
-                    <select name="attr_Endurance-Train">
+                    <select name="attr_Endurance-Train" class="sheet-Training">
                         <option value="0">Untrained</option>
                         <option value="2">Adept</option>
                         <option value="4">Trained</option>
@@ -182,7 +182,7 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Acrobatics-Train">
+                        <select name="attr_Acrobatics-Train" class="sheet-Training">
                             <option value="0">Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
@@ -224,7 +224,14 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Stealth-Train"> </select>
+                        <select name="attr_Stealth-Train" class="sheet-Training"> 
+                            <option value="0">Untrained</option>
+                            <option value="2">Adept</option>
+                            <option value="4">Trained</option>
+                            <option value="6">Experienced</option>
+                            <option value="8">Expert</option>
+                            <option value="10">Master</option>
+                        </select>
                         <label>
                             Misc. Bonus
                             <input
@@ -259,7 +266,7 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_SleightofHand-Train">
+                        <select name="attr_SleightofHand-Train" class="sheet-Training">
                             <option value="0">Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
@@ -319,7 +326,7 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Arcana-Train">
+                        <select name="attr_Arcana-Train" class="sheet-Training">
                             <option value="0">Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
@@ -361,7 +368,7 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Debate-Train">
+                        <select name="attr_Debate-Train" class="sheet-Training">
                             <option value="0">Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
@@ -403,7 +410,7 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Repair-Train">
+                        <select name="attr_Repair-Train" class="sheet-Training">
                             <option value="0">Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
@@ -445,7 +452,7 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Research-Train">
+                        <select name="attr_Research-Train" class="sheet-Training">
                             <option value="0">Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
@@ -505,7 +512,7 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_HandleAnimal-Train">
+                        <select name="attr_HandleAnimal-Train" class="sheet-Training">
                             <option value="0">Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
@@ -547,7 +554,7 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Insight-Train">
+                        <select name="attr_Insight-Train" class="sheet-Training">
                             <option value="0">Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
@@ -589,7 +596,7 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Medicine-Train">
+                        <select name="attr_Medicine-Train" class="sheet-Training">
                             <option value="0">Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
@@ -631,7 +638,7 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Perception-Train">
+                        <select name="attr_Perception-Train" class="sheet-Training">
                             <option value="0">Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
@@ -673,7 +680,7 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Survival-Train">
+                        <select name="attr_Survival-Train" class="sheet-Training">
                             <option value="0">Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
@@ -733,7 +740,7 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Appeal-Train">
+                        <select name="attr_Appeal-Train" class="sheet-Training">
                             <option value="0">Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
@@ -775,7 +782,7 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Impress-Train">
+                        <select name="attr_Impress-Train" class="sheet-Training">
                             <option value="0">Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
@@ -817,7 +824,7 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Socialize-Train">
+                        <select name="attr_Socialize-Train" class="sheet-Training">
                             <option value="0">Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
@@ -849,16 +856,16 @@
         </fieldset>
     </div>
     <div class="defense section">
-        <h2>Stats</h2>
-        <label title="Movement Speed"
-            ><input
+        <h2>Key Values</h2>
+        <label title="Movement Speed">
+            <input
                 type="text"
                 name="attr_speed"
                 class="sheet-speedIn"
                 value="30 feet"
             />
-            Movement</label
-        >
+            Speed
+        </label>
         <label title="HP"
             ><input type="number" name="attr_HP" value="20" /> /
             <input type="number" name="attr_HP_max" value="20" /> HP</label
@@ -871,10 +878,9 @@
             <input type="number" name="attr_surges_max" value="6" />
             Surges</label
         >
-        <br />
         <h3>Defenses</h3>
         <input type="number" name="attr_AC" value="10" class="sheet-defense" />
-        Armor Class
+        Armor Class (AC)
         <br />
         Misc bonus: <input type="number" name="attr_AC-Misc" value="0" />
         <br />
@@ -912,7 +918,7 @@
         <button
             type="roll"
             name="roll_Striker_Damage"
-            value="&{template:damage} {{name=Striker Dice}} {{damage=[[@{strikerdice}]]}} {{dmgcrit=[[@{strikercrit}]]}}"
+            value="&{template:damage} {{name=Bonus Dice}} {{damage=[[@{strikerdice}]]}} {{dmgcrit=[[@{strikercrit}]]}}"
         ></button>
         <input
             type="text"
@@ -1727,14 +1733,16 @@
             Feet<br />
         </div>
     </div>
-    <div class="backpack section">
-        <h2>Other Equipment</h2>
-        <h3>Currency</h3>
+    <div class="money section">
+        <h2>Currency</h2>
         <span name="attr_Currency" value="0 gp" style="font-size: 140%"></span>
         <label><input type="number" name="attr_Platinum" /> Platinum</label>
         <label><input type="number" name="attr_Gold" /> Gold</label>
         <label><input type="number" name="attr_Silver" /> Silver</label>
         <label><input type="number" name="attr_Copper" /> Copper</label>
+    </div>
+    <div class="backpack section">
+        <h2>Other Equipment</h2>
         <h3>Backpack</h3>
         <fieldset class="repeating_BackpackItems">
             <input type="text" name="attr_BackpackItem" class="sheet-Item" />
